--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,6 @@
 name: Deploy to GitHub Pages
 
 on:
-  # 监听 main 分支，一有 push 就运行
   push:
     branches: [ main ]
 
@@ -12,24 +11,24 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      # 1. 检出代码
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 2. 安装 Node.js 环境
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
 
-      # 3. 安装依赖并打包
       - name: Install and Build
         run: |
           npm install
           npm run build
+          # 👇 1. 解决 History 模式刷新 404
+          cp dist/index.html dist/404.html
+          # 👇 2. 核心修复：告诉 GitHub 不要过滤掉下划线开头的文件！
+          touch dist/.nojekyll
 
-      # 4. 把打包好的 dist 文件夹推送到 gh-pages 分支
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
